[package]
name = "myleetcode"
version = "0.1.0"
authors = ["Dou Chuan <1843657913@qq.com>"]
edition = "2018"

[lib]
name = "algo"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rand = "0.8.0"

[build-dependencies]
cc = "1.0"
