[package]
name = "algorithm"
version = "0.1.0"
authors = ["Dou Chuan <1843657913@qq.com>"]
edition = "2018"

[lib]
name = "algo"
path = "src/lib.rs"

[features]
instrument = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2"
nom = "6.2.1"
rand = "0.8.0"

[dev-dependencies]
approx = "0.5.0"
plotters = "0.3.1"

[build-dependencies]
cc = "1.0"
